--- a/dmkj-front/channel/src/less/ui/mixins.less
+++ b/dmkj-front/channel/src/less/ui/mixins.less
@@ -111,6 +111,10 @@
 // text-overflow
 // text-wrap
 
+@baseFontSize: 75;//基于视觉稿横屏尺寸/100得出的基准font-size
+.px2rem(@name, @px){
+  @{name}: @px / @baseFontSize * 1rem;
+}
 .align-content(...) {
   @process: ~`(function(r){return r=r||"stretch"})((function(){var r="@{arguments}";return r=r.replace(/^\[|\]$/g,"")})())`;
   @process_ms: ~`(function(t){return t=t||"stretch","flex-start"==t?t="start":"flex-end"==t?t="end":"space-between"==t?t="justify":"space-around"==t&&(t="distribute"),t})((function(){var r="@{arguments}";return r=r.replace(/^\[|\]$/g,"")})())`;
